force-app/main/default/objects/Activity/fields/Change_Org_Leads_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Change_Org_Leads_Email_Sent__c</fullName>
    <label>Change Org Leads Email Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>