force-app/main/default/objects/Activity/fields/Christmas_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>Christmas_Contact_List__c</fullName>
    <label>Christmas Contact List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>