force-app/main/default/objects/Activity/fields/CQ_Update_Contact_Details_Channel__c.field-meta.xml
<CustomField>
    <fullName>CQ_Update_Contact_Details_Channel__c</fullName>
    <label>CQ Update Contact Details Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DM Mail</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Updated Details</fullName>
            </value>
            <value>
                <fullName>Updated Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>