force-app/main/default/objects/Activity/fields/Delegated_Task__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Task__c</fullName>
    <formula>if( Owner:User.Id =CreatedBy.Id , False,True)</formula>
    <label>Delegated Task</label>
    <type>Checkbox</type>
</CustomField>