force-app/main/default/objects/Activity/fields/Finalisation_Answer__c.field-meta.xml
<CustomField>
    <fullName>Finalisation_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalisation Answer</label>
    <type>Checkbox</type>
</CustomField>