force-app/main/default/objects/Activity/fields/Interested_In_Fundraising_Again__c.field-meta.xml
<CustomField>
    <fullName>Interested_In_Fundraising_Again__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested In Fundraising Again</label>
    <type>Checkbox</type>
</CustomField>