force-app/main/default/objects/Activity/fields/Link_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Link_Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link Clicked</label>
    <type>Checkbox</type>
</CustomField>