force-app/main/default/objects/Activity/fields/MailChimp_Bounce_Type__c.field-meta.xml
<CustomField>
    <fullName>MailChimp_Bounce_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MailChimp Bounce Type</label>
    <type>Checkbox</type>
</CustomField>