force-app/main/default/objects/Activity/fields/MailChimp_Campaign__c.field-meta.xml
<CustomField>
    <fullName>MailChimp_Campaign__c</fullName>
    <label>MailChimp Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>