force-app/main/default/objects/Activity/fields/Mailchimp_Click_Through__c.field-meta.xml
<CustomField>
    <fullName>Mailchimp_Click_Through__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailchimp Click Through</label>
    <type>Checkbox</type>
</CustomField>