force-app/main/default/objects/Activity/fields/MailChimp_First_Open__c.field-meta.xml
<CustomField>
    <fullName>MailChimp_First_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MailChimp First Open</label>
    <type>Checkbox</type>
</CustomField>