force-app/main/default/objects/Activity/fields/RG_Conversion_Trigger__c.field-meta.xml
<CustomField>
    <fullName>RG_Conversion_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RG Conversion Trigger</label>
    <type>Checkbox</type>
</CustomField>