force-app/main/default/objects/Activity/fields/RG_Decline_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>RG_Decline_Call_Status__c</fullName>
    <label>RG Decline Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>