force-app/main/default/objects/Activity/fields/RG_Donor_Journey_Email_3__c.field-meta.xml
<CustomField>
    <fullName>RG_Donor_Journey_Email_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RG Donor Journey Email 3</label>
    <type>Checkbox</type>
</CustomField>