force-app/main/default/objects/Activity/fields/RG_Rejection_Contact__c.field-meta.xml
<CustomField>
    <fullName>RG_Rejection_Contact__c</fullName>
    <label>RG Rejection Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>