force-app/main/default/objects/Activity/fields/RG_Update_Details__c.field-meta.xml
<CustomField>
    <fullName>RG_Update_Details__c</fullName>
    <label>RG Update Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>