force-app/main/default/objects/Activity/fields/RG_Welcome_Back_Letter__c.field-meta.xml
<CustomField>
    <fullName>RG_Welcome_Back_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RG Welcome Back Letter</label>
    <type>Checkbox</type>
</CustomField>