force-app/main/default/objects/Activity/fields/Sock_It_To_Cancer_Interested__c.field-meta.xml
<CustomField>
    <fullName>Sock_It_To_Cancer_Interested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sock It To Cancer Interested</label>
    <type>Checkbox</type>
</CustomField>