force-app/main/default/objects/Activity/fields/TaskTemplateId__c.field-meta.xml
<CustomField>
    <fullName>TaskTemplateId__c</fullName>
    <description>Lookup link to Task Template</description>
    <externalId>true</externalId>
    <label>Task Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>