force-app/main/default/objects/Activity/fields/X1st_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>X1st_Contact_Attempt__c</fullName>
    <label>1st Contact Attempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>