force-app/main/default/objects/Activity/fields/X2nd_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Contact_Attempt__c</fullName>
    <label>2nd Contact Attempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>