force-app/main/default/objects/Activity/fields/X3rd_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Contact_Attempt__c</fullName>
    <label>3rd Contact Attempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>